# Chewybot

./: dataIO.py  json_loader.py  levelsys.py  main.py  mongo.py  profanity.txt  pyproject.toml  requirements.txt  utils.py
cogs/: chewy.py  fun.py  generator.py  help.py  music.py  rpg.py  social.py  utility.py
cogs/tools/: dataIO.py
config/: config.env  config.json
core/enemies/: enemies.json  weapons.json
guilds/: Apple Pie.json  Hydrax.json  hmm.json  urmom.json
players/212160821990522881/: info.json
players/376413893267816459/: info.json
players/405789630252974081/: info.json
players/656073353215344650/: info.json
players/705128058981449729/: info.json
