[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_beta_Chewybot"
version = "0.1.0"
[tool.poetry.dependencies]
DiscordUtils = "^1.3.4"
DiscordUtilsMODED = "^1.3.4"
Flask = "^2.0.1"
Pillow = "^9.1.0"
PyNaCl = "^1.4.0"
Voice = "^0.1.0"
asyncpraw = "^7.4.0"
buttons = "^0.1.9"
dataIO = "^0.0.5"
discord = "^1.7.3"
discord-command = "^0.0.2"
discord-components = "^1.1.4"
discord-py-slash-command = "^2.0.4"
dnspython = "^2.1.0"
eval = "^0.0.5"
eval7 = "^0.1.9"
giphy_client = "^1.0.0"
jishaku = "^2.3.0"
motor = "^2.4.0"
optional_import = "^1.2"
orjson = "^3.6.0"
pip-install = "^1.0.1"
pokebase = "^1.3.0"
praw = "^7.3.0"
python = "^3.8"
pytz = "^2021.1"
qrcode = "^7.1"
register = "^0.1"
slash-command-decorator = "^0.0.3"
wavelink = "^0.9.10"
[tool.poetry.dev-dependencies]
